--- a/package.json
+++ b/package.json
@@ -7,10 +7,19 @@
     "start": "vinxi start"
   },
   "dependencies": {
+    "@clerk/tanstack-start": "^0.5.1",
+    "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-router": "^1.82.1",
+    "@tanstack/router-devtools": "^1.82.2",
     "@tanstack/start": "^1.82.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.11.17",
+    "lucide-react": "^0.460.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7",
     "vinxi": "^0.4.3"
   },
   "devDependencies": {
@@ -18,7 +27,10 @@
     "@types/bun": "latest",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "@vitejs/plugin-react": "^4.3.3"
+    "@vitejs/plugin-react": "^4.3.3",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15"
   },
   "peerDependencies": {
     "typescript": "^5.6.3"
