--- a/components.json
+++ b/components.json
@@ -4,8 +4,8 @@
   "rsc": false,
   "tsx": true,
   "tailwind": {
-    "config": "tailwind.config.js",
-    "css": "src/index.css",
+    "config": "tailwind.config.ts",
+    "css": "app/styles/app.css",
     "baseColor": "zinc",
     "cssVariables": true,
     "prefix": ""
