--- a/package.json
+++ b/package.json
@@ -10,17 +10,22 @@
     "generate": "bunx drizzle-kit generate"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.701.0",
     "@clerk/tanstack-start": "^0.5.1",
+    "@clerk/themes": "^2.1.48",
     "@libsql/client": "^0.14.0",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-hover-card": "^1.1.2",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@tanstack/react-query": "^5.61.5",
+    "@tanstack/react-query-devtools": "^5.62.0",
     "@tanstack/react-router": "^1.82.1",
     "@tanstack/router-devtools": "^1.82.2",
     "@tanstack/start": "^1.82.1",
@@ -31,9 +36,11 @@
     "drizzle-orm": "^0.36.4",
     "framer-motion": "^11.11.17",
     "lucide-react": "^0.460.0",
+    "next-themes": "^0.4.3",
     "openai": "^4.73.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.2",
@@ -43,6 +50,7 @@
   "devDependencies": {
     "@tanstack/eslint-plugin-router": "^1.81.9",
     "@trigger.dev/build": "^3.3.0",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/bun": "latest",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
@@ -50,6 +58,7 @@
     "autoprefixer": "^10.4.20",
     "drizzle-kit": "^0.28.1",
     "postcss": "^8.4.49",
+    "prettier-plugin-tailwindcss": "^0.6.9",
     "tailwindcss": "^3.4.15",
     "tsx": "^4.19.2"
   },
