--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@clerk/tanstack-start": "^0.5.1",
     "@clerk/themes": "^2.1.48",
     "@libsql/client": "^0.14.0",
+    "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
