--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "@tanstack/start": "^1.82.1",
     "@trigger.dev/react-hooks": "3.3.0",
     "@trigger.dev/sdk": "^3.3.0",
+    "@vercel/analytics": "^1.4.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.36.4",
     "framer-motion": "^11.11.17",
@@ -54,12 +56,15 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.2.3",
     "@tanstack/eslint-plugin-router": "^1.81.9",
     "@trigger.dev/build": "^3.3.0",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/bun": "latest",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@typescript-eslint/eslint-plugin": "^8.16.0",
+    "@typescript-eslint/parser": "^8.16.0",
     "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.20",
     "drizzle-kit": "^0.28.1",
