--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "type": "module",
   "scripts": {
     "build": "vinxi build",
+    "deploy": "vercel deploy --prod",
     "dev": "vinxi dev",
-    "start": "vinxi start",
+    "generate": "bunx drizzle-kit generate",
+    "lint": "eslint . --fix",
     "migrate": "bunx drizzle-kit migrate",
     "push": "bunx drizzle-kit push",
-    "generate": "bunx drizzle-kit generate"
+    "start": "vinxi start"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.701.0",
@@ -42,6 +44,7 @@
     "drizzle-orm": "^0.36.4",
     "framer-motion": "^11.11.17",
     "lucide-react": "^0.460.0",
+    "motion": "^11.12.0",
     "next-themes": "^0.4.3",
     "openai": "^4.73.0",
     "react": "^18.3.1",
