--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "@tanstack/react-router": "^1.82.1",
     "@tanstack/router-devtools": "^1.82.2",
     "@tanstack/start": "^1.82.1",
-    "@trigger.dev/react-hooks": "3.3.0",
-    "@trigger.dev/sdk": "^3.3.0",
+    "@trigger.dev/react-hooks": "3.3.1",
+    "@trigger.dev/sdk": "3.3.1",
     "@vercel/analytics": "^1.4.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -55,7 +55,7 @@
   "devDependencies": {
     "@eslint/compat": "^1.2.3",
     "@tanstack/eslint-plugin-router": "^1.81.9",
-    "@trigger.dev/build": "^3.3.0",
+    "@trigger.dev/build": "3.3.1",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/bun": "latest",
     "@types/react": "^18.3.12",
