fixed calendar date picker, hooks, and api

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint . --fix",
     "migrate": "bunx drizzle-kit migrate",
     "push": "bunx drizzle-kit push",
-    "start": "vinxi start"
+    "start": "vinxi start",
+    "trigger": "bunx trigger.dev@latest dev"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.701.0",
@@ -34,8 +35,8 @@
     "@tanstack/react-router": "^1.82.1",
     "@tanstack/router-devtools": "^1.82.2",
     "@tanstack/start": "^1.82.1",
-    "@trigger.dev/react-hooks": "3.3.1",
-    "@trigger.dev/sdk": "3.3.1",
+    "@trigger.dev/react-hooks": "3.3.5",
+    "@trigger.dev/sdk": "3.3.5",
     "@vercel/analytics": "^1.4.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -45,17 +46,19 @@
     "motion": "^11.12.0",
     "openai": "^4.73.0",
     "react": "^18.3.1",
+    "react-day-picker": "^9",
     "react-dom": "^18.3.1",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "vaul": "^1.1.1",
     "vinxi": "^0.4.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/compat": "^1.2.3",
     "@tanstack/eslint-plugin-router": "^1.81.9",
-    "@trigger.dev/build": "3.3.1",
+    "@trigger.dev/build": "3.3.5",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/bun": "latest",
     "@types/react": "^18.3.12",
@@ -64,9 +67,12 @@
     "@typescript-eslint/parser": "^8.16.0",
     "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.20",
+    "babel-plugin-react-compiler": "^19.0.0-beta-df7b47d-20241124",
     "drizzle-kit": "^0.28.1",
+    "eslint-plugin-react-compiler": "^19.0.0-beta-df7b47d-20241124",
     "postcss": "^8.4.49",
     "prettier-plugin-tailwindcss": "^0.6.9",
+    "react-compiler-runtime": "^19.0.0-beta-df7b47d-20241124",
     "tailwindcss": "^3.4.15",
     "tsx": "^4.19.2"
   },
