--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@trigger.dev/react-hooks": "3.3.6",
     "@trigger.dev/sdk": "3.3.6",
     "@vercel/analytics": "^1.4.1",
+    "@vercel/speed-insights": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
